# cumm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  format_all.sh  pyproject.toml  setup.py
.github/workflows/: build.yaml
cmake/: cummConfig.cmake.in
cumm/: __init__.py  bindings.py  build_meta.py  common.py  constants.py  dtypes.py  inliner.py  perftools.py  tensorview.py  tensorview_bind.py  tensorview_bind_anno.pyi
cumm/apps/: designer.py  utils.py
cumm/cmds/: __init__.py
cumm/cmds/include_path/: __main__.py
cumm/conv/: algo.py  bases.py  input_iters.py  kernel.py  main.py  main_real.py  main_real_spconv.py  nvrtc_code.py  params.py  sparse_iters.py
cumm/conv/algospec/: __init__.py  all.py  core.py  simt.py  turing.py  volta.py
cumm/conv/legacy/: input_iters.py  main.py
cumm/core_cc/: tensorview_bind.pyi
cumm/core_cc/csrc/: arrayref.pyi
cumm/core_cc/cudasim/: arrayref.pyi
cumm/csrc/: arrayref.py
cumm/cudasim/: __init__.py  arrayref.py  checkers.py  debug.py
cumm/devapps/: template.py
cumm/develop/: eigendev.py  mathgen.py
cumm/gemm/: __init__.py  bases.py  codeops.py  constants.py  cutlasstest.py  dev_gemm.py  gather.py  kernel.py  layout.py  layout_tensorop.py  main.py  main_profile.py  main_real.py  main_real_test.py  main_simu.py  mask.py  mask_iters.py  nvrtc_code.py  out_iters.py  output.py  thread_map.py  turing_iters.py  turing_my_iters.py  turing_out_iters.py  utils.py  volta_iters.py  volta_out_iters.py
cumm/gemm/algospec/: __init__.py  all.py  bases.py  core.py  simt.py  turing.py  volta.py
cumm/gemm/arch/: __init__.py  cpasync.py  instmma.py  ldmatrix.py  memory.py  tensorop.py
cumm/gemm/blockmma/: __init__.py  mma.py  mma_async.py  mma_multistage.py
cumm/gemm/core/: __init__.py  metaarray.py
cumm/gemm/dev/: __init__.py
cumm/gemm/frozen/: __init__.py  mask_iters.py
cumm/gemm/gemmmath/: __init__.py
cumm/gemm/legacy/: turing_my_iters.py
cumm/gemm/output_op/: __init__.py  apply.py  linear.py
cumm/gemm/outputs/: __init__.py
cumm/gemm/wmma/: __init__.py  simt.py  turing.py  volta.py
cumm/inliner/: __init__.py  prompt.py  sympy_codegen.py
cumm/inliner/cpu/: __main__.py
cumm/inliner/cuda/: __main__.py
cumm/nvrtc/: __init__.py  dev.py
cumm/services/: nvrtc.py  serv_def.yaml
cumm/tensorview/: __init__.py  creator.py  gemm.py  tvio.py  utils.py
cumm/utils/: array_grad_check.py  richprint.py
include/tensorview/: cc17.h  check.h  common.h  context.h  cuda_utils.h  device_ops.h  dtypes.h  inspect_tools.h  kernel_utils.h  mp_helper.h  nvrtcutils.h  prettyprint.h  pybind.h  pybind_utils.h  simple_ops.h  tensor.h  tensorview.h  tools.h  torch_utils.h
include/tensorview/contexts/: core.h  cuda_blas.h
include/tensorview/core/: all.h  array.h  cc17.h  common.h  const_ops.h  const_string.h  defs.h  mp_helper.h  nvrtc_std.h  printf2.h  vecarray.h
include/tensorview/cuda/: all.h  arch_defs.h  device_ops.h  driver.h  driverops.h  kernel_all.h  kernel_utils.h  launch.h  nvrtc.h
include/tensorview/gemm/: constants.h  cutlass_compat.h  debug.h
include/tensorview/geometry/: all.h  obb_grid_overlap.h
include/tensorview/hash/: README.md  (+9 more)
scripts/: build-wheels.sh  install_windows_cuda.ps1
test/: constexpr_dev.py  cutest_nvrtc.py  cutest_nvrtc_dev.py  cutest_nvrtc_process.py  cutest_nvrtc_std.py  dev.py  llvm_debug.py  test_metal.py  test_tensors.py
test/math/: test_array.py  test_quat.py
test/reduce/: test_reduce.py
tools/: README.md  build-wheels-dev.sh  build-wheels.sh  dev.py  install_windows_cuda.ps1  linux_test_build.sh  msvc_setup.ps1
tutorials/: inline_cuda.ipynb
(+66 files in other folders)
